--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "astrohawan",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://astrohawan.com",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "@ckeditor/ckeditor5-react": "^7.0.0",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
